@@ -2,6 +2,7 @@ package com.example.learning_api.service.core.Impl;
 
 import com.example.learning_api.constant.CloudinaryConstant;
 import com.example.learning_api.constant.ErrorConstant;
+import com.example.learning_api.dto.common.LessonCompleteDto;
 import com.example.learning_api.dto.request.classroom.*;
 import com.example.learning_api.dto.response.classroom.*;
 import com.example.learning_api.dto.response.CloudinaryUploadResponse;
@@ -54,6 +55,7 @@ public class ClassRoomService implements IClassRoomService {
     private final ReviewRepository reviewRepository;
     private final UserRepository userRepository;
     private final CategoryRepository categoryRepository;
+    private final SectionService sectionService;
     @Override
     public CreateClassRoomResponse createClassRoom(CreateClassRoomRequest body) {
         try{
@@ -911,10 +913,11 @@ public class ClassRoomService implements IClassRoomService {
             List<TestEntity> listTest = listTestOfClass.getContent();
 
             // Fetch all test results
+            // Fetch all test results
             List<TestResultEntity> allTestResults = listTest.stream()
                     .map(test -> listTestResult.stream()
                             .filter(result -> result.getTestId().equals(test.getId()))
-                            .findFirst()
+                            .max(Comparator.comparingDouble(TestResultOfTestResponse::getGrade))
                             .map(result -> {
                                 TestResultEntity entity = new TestResultEntity();
                                 entity.setId(result.getResultId());
@@ -948,11 +951,69 @@ public class ClassRoomService implements IClassRoomService {
                                 return notAttempted;
                             }))
                     .collect(Collectors.toList());
+            List<TestEntity> tests = testRepository.findByClassroomId(classroomId);
+            List<DeadlineEntity> deadlines = deadlineRepository.findAllByClassroomId(classroomId);
+            for (TestEntity test : tests) {
+                List<TestResultEntity> testResults = allTestResults.stream()
+                        .filter(result -> result.getTestId().equals(test.getId()))
+                        .toList();
+                if (testResults.isEmpty()) {
+                    TestResultEntity notAttempted = new TestResultEntity();
+                    notAttempted.setTestId(test.getId());
+                    notAttempted.setStudentId(studentId);
+                    notAttempted.setState(TestState.NOT_STARTED);
+                    allTestResults.add(notAttempted);
 
+                }
+                test.setTestResults(testResults);
+
+            }
+            for (DeadlineEntity deadline : deadlines) {
+                List<DeadlineSubmissionsEntity> deadlineSubmissions = allDeadlineSubmissions.stream()
+                        .filter(submission -> submission.getDeadlineId().equals(deadline.getId()))
+                        .toList();
+                if (deadlineSubmissions.isEmpty()) {
+                    DeadlineSubmissionsEntity notAttempted = new DeadlineSubmissionsEntity();
+                    notAttempted.setDeadlineId(deadline.getId());
+                    notAttempted.setStudentId(studentId);
+                    notAttempted.setStatus(DeadlineSubmissionStatus.NOT_SUBMITTED);
+                    allDeadlineSubmissions.add(notAttempted);
+                }
+                deadline.setSubmissions(deadlineSubmissions);
+            }
             res.setStudentAvatar(student.getUser().getAvatar());
             res.setStudentName(student.getUser().getFullname());
-            res.setTestResults(allTestResults);
-            res.setDeadlineSubmissions(allDeadlineSubmissions);
+            res.setTests(tests);
+            res.setDeadlines(deadlines);
+            res.setTotalTest(tests.size());
+            res.setTotalTestTaken((int) allTestResults.stream().filter(result -> result.getState() != TestState.NOT_STARTED).count());
+            GetSectionsResponse sections = sectionService.getSectionsByClassRoomId(classroomId,0,99,"USER",studentId);
+            int totalLessonCompleted = 0;
+            int totalLesson= 0;
+            for (GetSectionsResponse.SectionResponse section : sections.getSections()){
+                for (GetSectionsResponse.LessonResponse lesson : section.getLessons()){
+                    totalLesson++;
+                    if (lesson.getIsComplete()){
+                        totalLessonCompleted++;
+                    }
+                }
+            }
+            res.setTotalLesson(totalLesson);
+            res.setTotalLessonComplete(totalLessonCompleted);
+            res.setProgress((double) Math.ceil((double) totalLessonCompleted / res.getTotalLesson() * 100));
+            Pageable pageable1 = PageRequest.of(0, 3);
+            Page<ProgressEntity> progresses = progressRepository.findByStudentIdAndClassroomId(studentId, classroomId, pageable1);
+            List<LessonCompleteDto> lessonCompletes = new ArrayList<>();
+            for (ProgressEntity progress : progresses) {
+                LessonCompleteDto lessonComplete = new LessonCompleteDto();
+                lessonComplete.setLessonId(progress.getLessonId());
+                LessonEntity lesson = lessonRepository.findById(progress.getLessonId())
+                        .orElseThrow(() -> new CustomException(ErrorConstant.NOT_FOUND));
+                lessonComplete.setLessonName(lesson.getName());
+                lessonComplete.setCreatedAt(progress.getCompletedAt());
+                lessonCompletes.add(lessonComplete);
+            }
+            res.setLastLessonComplete(lessonCompletes);
             return res;
         } catch (Exception e) {
             throw new IllegalArgumentException(e.getMessage());
@@ -993,7 +1054,7 @@ public class ClassRoomService implements IClassRoomService {
             List<TestEntity> tests = testRepository.findByClassroomId(classroomId);
             List<StudentEntity> students = studentEnrollmentsRepository.findByClassroomId(classroomId).stream()
                     .map(studentEnrollmentsEntity -> studentRepository.findById(studentEnrollmentsEntity.getStudentId()).get())
-                    .collect(Collectors.toList());
+                    .toList();
             List<UserEntity> users = new ArrayList<>();
             for (StudentEntity student : students){
                 UserEntity user = student.getUser();
